--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
-Hello!
-
-First edit
+<HTML>
+<FRAMESET cols="15%, 85%">
+	//<frame src="left.html" name="leftframe" id="left">
+	//<frame src="home.html" name="rightframe">
+	</FRAMESET>
+</frameset>
+</HTML>
